--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Brain-Rot-RPG/brc-gateway#readme",
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/express": "^5.0.6",
     "@types/http-proxy": "^1.17.17",
     "@types/node": "^25.2.0",
@@ -35,6 +36,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "http-proxy": "^1.18.1"
+    "amqplib": "^0.10.9",
+    "http-proxy": "^1.18.1",
+    "uuid": "^13.0.0"
   }
 }
