--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ RABBITMQ_URI=amqp://brc_runner:rabbit_pass_secure@localhost:5672
 BRAINROT_SERVICE_URL=http://localhost:4001/api/v1/brainrot
 DUNGEON_SERVICE_URL=http://localhost:4003/api/v1/dungeon
 PLAYER_SERVICE_URL=http://localhost:4004/api/v1/player
-SAVE_SERVICE_URL=http://localhost:4005/v1/save
+SAVE_SERVICE_URL=http://localhost:4005/api/v1/save
 AUTH_SERVICE_URL=http://localhost:4007/api/v1/auth
 BATTLE_SERVICE_URL=http://localhost:4008/
 USER_SERVICE_URL=http://localhost:4005/api/v1/user
